# mlops-task-server-prefect

./: .flake8  .gitignore  Makefile  README.md  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt
flows/: aks_encoding_flow.py  aks_flow.py  docker_flow.py  example_flow.py
manifests/: aks.yaml  prefect-k8s-agent.yaml
scripts/: setup_env.sh
tasks/encoding_task/: Dockerfile  pyproject.toml  requirements.txt
tasks/encoding_task/src/: concurrent_encoding.py  encoding.py  encoding_vecdb.py  encoding_vi.py
terraform/: .gitignore  README.md  deploy_tfstate_backend.sh  main.tf  output.tf  variables.tf
terraform/backends/: main.tf  output.tf  variables.tf
terraform/modules/acr/: main.tf  output.tf  variables.tf
terraform/modules/dns/: main.tf  variables.tf
terraform/modules/k8s/: main.tf  output.tf  variables.tf
terraform/modules/psql/: main.tf  output.tf  variables.tf
