[tool.poetry]
name = "prefect-task-server"
version = "0.1.0"
description = "Prefect Task Server POC"
authors = ["Charlene Leong <charleneleong84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
vectorai = "^0.3.0"
vectorhub = "^1.2.2"
pandas = "^1.3.0"
peodd = "^0.2.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.7b0"
pytest = "^6.2.4"
jmespath-terminal = "^0.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
